Create pets.css và ảnh alaska
css list product, result count, sửa link dẫn ảnh trong file html

--- a/pets.html
+++ b/pets.html
@@ -240,7 +240,7 @@
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
                             </div>
-                            <img src="./image/pets/alaka.jpg" alt="image-product" class="image-product">
+                            <img src="./image/pets/alaska.jpg" alt="image-product" class="image-product">
                         </div>
                         <div class="product-information">
                             <div class="price-product">
@@ -261,7 +261,7 @@
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
                             </div>
-                            <img src="./image/pets/alaka.jpg" alt="image-product" class="image-product">
+                            <img src="./image/pets/alaska.jpg" alt="image-product" class="image-product">
                         </div>
                         <div class="product-information">
                             <div class="price-product">
@@ -282,7 +282,7 @@
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
                             </div>
-                            <img src="./image/pets/alaka.jpg" alt="image-product" class="image-product">
+                            <img src="./image/pets/alaska.jpg" alt="image-product" class="image-product">
                         </div>
                         <div class="product-information">
                             <div class="price-product">
@@ -303,7 +303,7 @@
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
                             </div>
-                            <img src="./image/pets/alaka.jpg" alt="image-product" class="image-product">
+                            <img src="./image/pets/alaska.jpg" alt="image-product" class="image-product">
                         </div>
                         <div class="product-information">
                             <div class="price-product">
@@ -324,7 +324,7 @@
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
                             </div>
-                            <img src="./image/pets/alaka.jpg" alt="image-product" class="image-product">
+                            <img src="./image/pets/alaska.jpg" alt="image-product" class="image-product">
                         </div>
                         <div class="product-information">
                             <div class="price-product">
@@ -345,7 +345,7 @@
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
                             </div>
-                            <img src="./image/pets/alaka.jpg" alt="image-product" class="image-product">
+                            <img src="./image/pets/alaska.jpg" alt="image-product" class="image-product">
                         </div>
                         <div class="product-information">
                             <div class="price-product">
@@ -366,7 +366,7 @@
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
                             </div>
-                            <img src="./image/pets/alaka.jpg" alt="image-product" class="image-product">
+                            <img src="./image/pets/alaska.jpg" alt="image-product" class="image-product">
                         </div>
                         <div class="product-information">
                             <div class="price-product">
@@ -387,7 +387,7 @@
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
                             </div>
-                            <img src="./image/pets/alaka.jpg" alt="image-product" class="image-product">
+                            <img src="./image/pets/alaska.jpg" alt="image-product" class="image-product">
                         </div>
                         <div class="product-information">
                             <div class="price-product">
@@ -409,7 +409,7 @@
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
                             </div>
-                            <img src="./image/pets/alaka.jpg" alt="image-product" class="image-product">
+                            <img src="./image/pets/alaska.jpg" alt="image-product" class="image-product">
                         </div>
                         <div class="product-information">
                             <div class="price-product">
