sửa link dẫn sao đánh giá

--- a/pets.html
+++ b/pets.html
@@ -16,7 +16,7 @@
     <section class="address">
         <a href="" class="product-link">Trang chủ</a>
         <span class="icon_more_than">></span>
-        <a href="" class="product-link">Thú cưng</a>
+        <a href="" class="product-link current-link">Thú cưng</a>
     </section>
 
     <!-- Content -->
@@ -217,11 +217,11 @@
                     <a href="" class="product-link">
                         <div class="product-image">
                             <div class="star">
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
                             </div>
                             <img src="./image/pets/alaska.jpg" alt="image-product" class="image-product">
                         </div>
@@ -238,11 +238,11 @@
                     <a href="" class="product-link">
                         <div class="product-image">
                             <div class="star">
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
                             </div>
                             <img src="./image/pets/alaska.jpg" alt="image-product" class="image-product">
                         </div>
@@ -259,11 +259,11 @@
                     <a href="" class="product-link">
                         <div class="product-image">
                             <div class="star">
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
                             </div>
                             <img src="./image/pets/alaska.jpg" alt="image-product" class="image-product">
                         </div>
@@ -280,11 +280,11 @@
                     <a href="" class="product-link">
                         <div class="product-image">
                             <div class="star">
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
                             </div>
                             <img src="./image/pets/alaska.jpg" alt="image-product" class="image-product">
                         </div>
@@ -301,11 +301,11 @@
                     <a href="" class="product-link">
                         <div class="product-image">
                             <div class="star">
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
                             </div>
                             <img src="./image/pets/alaska.jpg" alt="image-product" class="image-product">
                         </div>
@@ -322,11 +322,11 @@
                     <a href="" class="product-link">
                         <div class="product-image">
                             <div class="star">
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
                             </div>
                             <img src="./image/pets/alaska.jpg" alt="image-product" class="image-product">
                         </div>
@@ -343,11 +343,11 @@
                     <a href="" class="product-link">
                         <div class="product-image">
                             <div class="star">
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
                             </div>
                             <img src="./image/pets/alaska.jpg" alt="image-product" class="image-product">
                         </div>
@@ -364,11 +364,11 @@
                     <a href="" class="product-link">
                         <div class="product-image">
                             <div class="star">
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
                             </div>
                             <img src="./image/pets/alaska.jpg" alt="image-product" class="image-product">
                         </div>
@@ -386,11 +386,11 @@
                     <a href="" class="product-link">
                         <div class="product-image">
                             <div class="star">
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
                             </div>
                             <img src="./image/pets/alaska.jpg" alt="image-product" class="image-product">
                         </div>
