html, css mô tả thú cưng

--- a/pet.html
+++ b/pet.html
@@ -85,7 +85,35 @@
                 </div>
              </div>
         </div>
-        
+
+        <!-- Product describe -->
+        <div class="product-describe">
+            <h3 class="sub-title">Mô tả thú cưng</h3>
+            <div class="describe">
+                <div class="describe-content">
+                    <p>Giống chó: Alaska Malamute.</p>
+                    <p>Màu sắc: Trắng xám</p>
+                    <p>Giới tính: Ngẫu nhiên</p>
+                    <p>Tuổi: 2 - 4 tháng</p>
+                    <p>Nguồn gốc: Nhân giống tại Trang trại productline Kennel Đà Lạt (thành viên Hiệp hội những người nuôi chó giống Việt Nam – VKA).</p>
+                    <p>Thông tin tiêm chủng: Đã tiêm vacxine phòng Care virus, Parvo virus, Viêm gan truyền nhiễm, Ho mũi chó, Phó cúm, Coronavirus.</p>
+                    <p>Triệt sản: Chưa.</p>
+                    <p>Cân nặng: 5-10 kg</p>
+                    <p>Chó Alaska Malamute thường được gọi là Alaska, giống chó tuyết hoang được thuần hóa bởi bộ tộc Malamute. Chó Alaska là giống chó có họ hàng với Husky Sibir và Samoyed. Alaska gây ấn tượng với người nhìn bởi một thân hình to lớn mang nét dũng mãnh đặc trưng của loài chó sói hoang dã.</p>
+                    <p>Chó Alaska (Alaskan Malamute) có ngoại hình khá lớn với chiều cao trung bình khoảng 60-70 cm, nặng từ 35-55kg. Đặc biệt, loài Giant Alaska của người Eskimo còn cao tới 1m và nặng đến 80 kg. Dù có thân hình được cho là “ngoại cỡ” nhưng chó Alaska có một ngoại hình rất cân đối giữa chiều cao, cân nặng so với khung xương và cơ bắp.</p>
+                </div>
+            </div>
+            <div class="promotion-benefit">
+               <div class="promotion-benefit-content">
+                    <h4 class="promotion-benefit-title">Khuyến mãi & Quyền lợi</h4>
+                    <p><i class="fa-solid fa-check"></i>Trả góp LS 0% trong 12 tháng.</p>
+                    <p><i class="fa-solid fa-check"></i>Bảo hành sức khỏe toàn diện mọi bệnh trong 7 ngày đầu.</p>
+                    <p><i class="fa-solid fa-check"></i>Bảo hành các bệnh tiêm vắc xin trong vòng 15 ngày.</p>
+                    <p><i class="fa-solid fa-check"></i>Hỗ trợ 10% phí dịch vụ product Salon & product Hotel trọn đời.</p>
+                    <p><i class="fa-solid fa-check"></i>Giảm 50% giá phối giống trọn đời.</p>
+               </div>
+            </div>
+        </div>
     </section>
 
     <!-- Footer -->
