html,css gợi ý thú cưng và gợi ý sản phẩm dành cho thú cưng

--- a/pet.html
+++ b/pet.html
@@ -114,6 +114,225 @@
                </div>
             </div>
         </div>
+        <div class="product-evaluate">
+
+        </div>
+
+        <!-- Pet(Product) suggest -->
+        <div class="product-suggest">
+            <h3 class="sub-title">Thú cưng tương tự</h3>
+            <div class="product-slider">
+                <div class="slider-btn">
+                    <button class="btn-prep">
+                        <i class="fa-solid fa-caret-left"></i>
+                    </button>
+                </div>
+                <div class="product">
+                    <a href="" class="product-link">
+                        <div class="product-image">
+                            <div class="star">
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                            </div>
+                            <img src="./image/pets/alaska.jpg" alt="image-product" class="image-product">
+                        </div>
+                        <div class="product-information">
+                            <div class="price-product">
+                                <span>17,000,000</span>
+                                <span>đ</span>
+                            </div>
+                            <div class="name-product">Alaska Malamute trắng xám</div>
+                        </div>
+                    </a>
+                </div>
+                <div class="product">
+                    <a href="" class="product-link">
+                        <div class="product-image">
+                            <div class="star">
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                            </div>
+                            <img src="./image/pets/alaska.jpg" alt="image-product" class="image-product">
+                        </div>
+                        <div class="product-information">
+                            <div class="price-product">
+                                <span>17,000,000</span>
+                                <span>đ</span>
+                            </div>
+                            <div class="name-product">Alaska Malamute trắng xám</div>
+                        </div>
+                    </a>
+                </div>
+                <div class="product">
+                    <a href="" class="product-link">
+                        <div class="product-image">
+                            <div class="star">
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                            </div>
+                            <img src="./image/pets/alaska.jpg" alt="image-product" class="image-product">
+                        </div>
+                        <div class="product-information">
+                            <div class="price-product">
+                                <span>17,000,000</span>
+                                <span>đ</span>
+                            </div>
+                            <div class="name-product">Alaska Malamute trắng xám</div>
+                        </div>
+                    </a>
+                </div>
+                <div class="product">
+                    <a href="" class="product-link">
+                        <div class="product-image">
+                            <div class="star">
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                            </div>
+                            <img src="./image/pets/alaska.jpg" alt="image-product" class="image-product">
+                        </div>
+                        <div class="product-information">
+                            <div class="price-product">
+                                <span>17,000,000</span>
+                                <span>đ</span>
+                            </div>
+                            <div class="name-product">Alaska Malamute trắng xám</div>
+                        </div>
+                    </a>
+                </div>
+                <div class="slider-btn">
+                    <button class="btn-next">
+                        <i class="fa-solid fa-caret-right"></i>
+                    </button>
+                </div>
+                <div class="slider-dot">
+                    <i class="fa-solid fa-circle"></i>
+                    <i class="fa-solid fa-circle"></i>
+                    <i class="fa-solid fa-circle"></i>
+                    <i class="fa-solid fa-circle"></i>
+                    <i class="fa-solid fa-circle"></i>
+                </div>
+            </div>
+        </div>
+
+        <!-- Product suggest -->
+        <div class="product-suggest">
+            <h3 class="sub-title">Sản phẩm dành cho Alaska Malamute</h3>
+            <div class="product-slider">
+                <div class="slider-btn">
+                    <button class="btn-prep">
+                        <i class="fa-solid fa-caret-left"></i>
+                    </button>
+                </div>
+                <div class="product">
+                    <a href="" class="product-link">
+                        <div class="product-image">
+                            <div class="star">
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                            </div>
+                            <img src="./image/pets/alaska.jpg" alt="image-product" class="image-product">
+                        </div>
+                        <div class="product-information">
+                            <div class="price-product">
+                                <span>17,000,000</span>
+                                <span>đ</span>
+                            </div>
+                            <div class="name-product">Alaska Malamute trắng xám</div>
+                        </div>
+                    </a>
+                </div>
+                <div class="product">
+                    <a href="" class="product-link">
+                        <div class="product-image">
+                            <div class="star">
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                            </div>
+                            <img src="./image/pets/alaska.jpg" alt="image-product" class="image-product">
+                        </div>
+                        <div class="product-information">
+                            <div class="price-product">
+                                <span>17,000,000</span>
+                                <span>đ</span>
+                            </div>
+                            <div class="name-product">Alaska Malamute trắng xám</div>
+                        </div>
+                    </a>
+                </div>
+                <div class="product">
+                    <a href="" class="product-link">
+                        <div class="product-image">
+                            <div class="star">
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                            </div>
+                            <img src="./image/pets/alaska.jpg" alt="image-product" class="image-product">
+                        </div>
+                        <div class="product-information">
+                            <div class="price-product">
+                                <span>17,000,000</span>
+                                <span>đ</span>
+                            </div>
+                            <div class="name-product">Alaska Malamute trắng xám</div>
+                        </div>
+                    </a>
+                </div>
+                <div class="product">
+                    <a href="" class="product-link">
+                        <div class="product-image">
+                            <div class="star">
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                            </div>
+                            <img src="./image/pets/alaska.jpg" alt="image-product" class="image-product">
+                        </div>
+                        <div class="product-information">
+                            <div class="price-product">
+                                <span>17,000,000</span>
+                                <span>đ</span>
+                            </div>
+                            <div class="name-product">Alaska Malamute trắng xám</div>
+                        </div>
+                    </a>
+                </div>
+                <div class="slider-btn">
+                    <button class="btn-next">
+                        <i class="fa-solid fa-caret-right"></i>
+                    </button>
+                </div>
+                <div class="slider-dot">
+                    <i class="fa-solid fa-circle"></i>
+                    <i class="fa-solid fa-circle"></i>
+                    <i class="fa-solid fa-circle"></i>
+                    <i class="fa-solid fa-circle"></i>
+                    <i class="fa-solid fa-circle"></i>
+                </div>
+            </div>
+        </div>
     </section>
 
     <!-- Footer -->
