html, css đánh giá thú cưng

--- a/pet.html
+++ b/pet.html
@@ -47,7 +47,7 @@
             <!-- Infromation product -->
             <div class="infomation">
                 <h3 class="title">Alaska Malamute trắng xám</h3>
-                <div class="evaluate">
+                <div class="evaluate-info">
                     <div class="star-evaluate">
                         <p class="number-star">4.0</p>
                         <i class="fa-solid fa-star"></i>
@@ -114,8 +114,86 @@
                </div>
             </div>
         </div>
-        <div class="product-evaluate">
 
+        <!-- Product evaluate -->
+        <div class="product-evaluate">
+            <h3 class="sub-title">Đánh giá thú cưng</h3>
+            <!-- Evaluate medium -->
+            <div class="evaluate-medium">
+                <div class="medium">
+                    <p><span>4.0</span> trên 5</p>
+                    <div class="medium-star">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                    </div>
+                </div>
+                <div class="parts">
+                    <div class="part">Tất cả (10)</div>
+                    <div class="part">5 sao (0) </div>
+                    <div class="part">4 sao (10)</div>
+                    <div class="part">3 sao (0)</div>
+                    <div class="part">2 sao (0)</div>
+                    <div class="part">1 sao (0)</div>
+                    <div class="part">Có hình ảnh (0)</div>
+                </div>
+            </div>
+            <!-- Evaluates -->
+            <div class="evaluates">
+                <div class="evaluate">
+                    <div class="user-img">
+                        <i class="fa-solid fa-user"></i>
+                    </div>
+                    <div class="user-evaluate">
+                        <p class="user-name">nguoithuakenhahang</p>
+                        <div class="user-star">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-regular fa-star"></i>
+                        </div>
+                        <p class="hour-day-evaluate">12:34 - 05/06/2023</p>
+                        <p class="evaluate-text">Từ khi có chú cún này bên cạnh tôi đã không còn thấy cô đơn trong hai dãy nhà mặt phố của mình nữa.</p>
+                    </div>
+                </div>
+                <div class="evaluate">
+                    <div class="user-img">
+                        <i class="fa-solid fa-user"></i>
+                    </div>
+                    <div class="user-evaluate">
+                        <p class="user-name">phuba</p>
+                        <div class="user-star">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-regular fa-star"></i>
+                        </div>
+                        <p class="hour-day-evaluate">01:01 - 24/04/2023</p>
+                        <p class="evaluate-text">Bây giờ mỗi lần áp lực vì không dùng hết tiền tôi chỉ cần mua cho chú cún của mình 5kg thịt bò wagyu và một chuyến du lịch Madives dành cho thú cưng.</p>
+                    </div>
+                </div>
+                <div class="evaluate">
+                    <div class="user-img">
+                        <i class="fa-solid fa-user"></i>
+                    </div>
+                    <div class="user-evaluate">
+                        <p class="user-name">connghienstarrail</p>
+                        <div class="user-star">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-regular fa-star"></i>
+                        </div>
+                        <p class="hour-day-evaluate">02:01 - 24/05/2023</p>
+                        <p class="evaluate-text">❤️❤️❤️❤️❤️</p>
+                    </div>
+                </div>
+            </div>
         </div>
 
         <!-- Pet(Product) suggest -->
