--- a/cart.html
+++ b/cart.html
@@ -53,6 +53,106 @@
             </ul>
     
         </div>
+
+        <!-- Cart content -->
+        <div class="cart-content">
+            <div class="cart-product-all">
+                <div class="cart-all">
+                    <input type="checkbox" name="checkbox" id="all">
+                    <label for="all">
+                        <span class="product-name">Tất cả (3 sản phẩm)</span>
+                    </label>
+                    <p>Đơn giá</p>
+                    <p>Số lượng</p>
+                    <p>Thành tiền</p>
+                    <i class="fa-solid fa-trash"></i>
+                </div>
+                <div class="cart-product">
+                    <div class="product">
+                        <input type="checkbox" name="checkbox" id="product-1">
+                        <img src="./image/products/image-1.jpg" alt="image-product" class="image-product"> 
+                        <label for="product-1">
+                            <span class="product-name">Thức ăn hạt cho mèo Me-O 350g</span>
+                        </label>
+                        <p>30,000đ</p>
+                        <div class="quantity-btn">
+                            <i class="fa-solid fa-minus"></i>
+                            <p class="quantity-num">1</p>
+                            <i class="fa-solid fa-plus"></i>
+                        </div>
+                        <p>30,000đ</p>
+                        <i class="fa-solid fa-trash"></i>
+                    </div>
+                    <div class="product">
+                        <input type="checkbox" name="checkbox" id="product-2">
+                        <img src="./image/products/image-1.jpg" alt="image-product" class="image-product"> 
+                        <label for="product-2">
+                            <span class="product-name">Sữa tắm cho chó mèo Dorrikey 510ml</span>
+                        </label>
+                        <p>47,200đ</p>
+                        <div class="quantity-btn">
+                            <i class="fa-solid fa-minus"></i>
+                            <p class="quantity-num">2</p>
+                            <i class="fa-solid fa-plus"></i>
+                        </div>
+                        <p>94,400đ</p>
+                        <i class="fa-solid fa-trash"></i>
+                    </div>
+                    <div class="product">
+                        <input type="checkbox" name="checkbox" id="product-3">
+                        <img src="./image/pets/alaska.jpg" alt="image-product" class="image-product"> 
+                        <label for="product-3">
+                            <span class="product-name">Alaska Malamute trắng xám</span>
+                        </label>
+                        <p>17,000,000đ</p>
+                        <div class="quantity-btn">
+                            <i class="fa-solid fa-minus"></i>
+                            <p class="quantity-num">1</p>
+                            <i class="fa-solid fa-plus"></i>
+                        </div>
+                        <p>17,000,000đ</p>
+                        <i class="fa-solid fa-trash"></i>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Cart price -->
+            <div class="cart-price">
+                <!-- Promotional code -->
+                <div class="promotional-code">
+                    <p class="promotional-name">Mã khuyến mãi</p>
+                    <div class="promotional-note">
+                        <p>Chỉ chọn 1</p> 
+                        <span>i</span>
+                    </div>
+                    <div class="promotional-select">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
+                            <path d="M17.9062 8.34375C18.25 8.1875 18.4375 7.84375 18.4375 7.5V5C18.4375 4.46875 18.0312 4.0625 17.5 4.0625H2.5C1.96875 4.0625 1.5625 4.46875 1.5625 5V7.4375C1.5625 7.8125 1.78125 8.125 2.125 8.28125C2.78125 8.59375 3.21875 9.25 3.21875 10C3.21875 10.75 2.8125 11.4062 2.125 11.7188C1.78125 11.875 1.5625 12.1875 1.5625 12.5625V15C1.5625 15.5312 1.96875 15.9375 2.5 15.9375H17.5C18.0312 15.9375 18.4375 15.5312 18.4375 15V12.5312C18.4375 12.1875 18.2188 11.8438 17.9062 11.6875C17.2812 11.375 16.875 10.7187 16.875 10.0312C16.875 9.34375 17.2812 8.65625 17.9062 8.34375ZM16.25 10C16.25 10.9375 16.7812 11.8125 17.625 12.2188C17.75 12.2812 17.8125 12.4062 17.8125 12.5V15C17.8125 15.1875 17.6875 15.3125 17.5 15.3125H2.5C2.3125 15.3125 2.1875 15.1875 2.1875 15V12.5625C2.1875 12.4375 2.28125 12.3125 2.40625 12.2812C3.3125 11.875 3.875 10.9688 3.875 10C3.875 9.03125 3.3125 8.125 2.40625 7.71875C2.28125 7.65625 2.1875 7.5625 2.1875 7.4375V5C2.1875 4.8125 2.3125 4.6875 2.5 4.6875H17.5C17.6875 4.6875 17.8125 4.8125 17.8125 5V7.46875C17.8125 7.59375 17.75 7.6875 17.625 7.75C16.7812 8.1875 16.25 9.0625 16.25 10Z" fill="#F2AB1E" stroke="#F2AB1E"/>
+                            <path d="M12.1875 10.625C11.3125 10.625 10.625 11.3125 10.625 12.1875C10.625 13.0625 11.3125 13.75 12.1875 13.75C13.0625 13.75 13.75 13.0625 13.75 12.1875C13.75 11.3125 13.0625 10.625 12.1875 10.625ZM12.1875 13.125C11.6562 13.125 11.25 12.7188 11.25 12.1875C11.25 11.6562 11.6562 11.25 12.1875 11.25C12.7188 11.25 13.125 11.6562 13.125 12.1875C13.125 12.7188 12.7188 13.125 12.1875 13.125ZM7.8125 9.375C8.6875 9.375 9.375 8.6875 9.375 7.8125C9.375 6.9375 8.6875 6.25 7.8125 6.25C6.9375 6.25 6.25 6.9375 6.25 7.8125C6.25 8.6875 6.9375 9.375 7.8125 9.375ZM7.8125 6.875C8.34375 6.875 8.75 7.28125 8.75 7.8125C8.75 8.34375 8.34375 8.75 7.8125 8.75C7.28125 8.75 6.875 8.34375 6.875 7.8125C6.875 7.28125 7.28125 6.875 7.8125 6.875ZM13.4375 7.46875C13.4375 7.21875 13.3437 7 13.1562 6.8125C12.8125 6.46875 12.2188 6.46875 11.875 6.8125L6.84375 11.875C6.6875 12.0312 6.5625 12.2812 6.5625 12.5312C6.5625 12.7812 6.65625 13 6.84375 13.1875C7.03125 13.375 7.25 13.4687 7.5 13.4687C7.71875 13.4687 7.96875 13.375 8.15625 13.1875L13.1562 8.125C13.3437 7.9375 13.4375 7.71875 13.4375 7.46875ZM12.7188 7.65625L7.65625 12.7188C7.53125 12.8438 7.375 12.8438 7.25 12.7188C7.1875 12.6562 7.15625 12.5937 7.15625 12.5312C7.15625 12.4687 7.1875 12.375 7.25 12.3438L12.3125 7.28125C12.375 7.21875 12.4375 7.1875 12.5 7.1875C12.5625 7.1875 12.6562 7.21875 12.6875 7.28125C12.75 7.34375 12.7813 7.40625 12.7813 7.46875C12.7813 7.53125 12.7812 7.625 12.7188 7.65625Z" fill="#F2AB1E"/>
+                        </svg>
+                        <p>Chọn hoặc nhập khuyến mãi khác</p>
+                    </div>
+                </div>
+                <!-- Total price -->
+                <div class="total-price">
+                    <p class="name-price">Tạm tính</p>
+                    <p class="price">0<span>đ</span></p>
+                    <p class="name-price">Giảm giá</p>
+                    <p class="price">0<span>đ</span></p>
+                    <div class="all">
+                        <p class="name-price">Tổng tiền</p>
+                        <div class="price">
+                            <p>Vui lòng chọn sản phẩm</p>
+                            <p class="note">(Đã bao gồm VAT nếu có)</p>
+                        </div>
+                    </div>
+                </div>
+                <!-- Button buy -->
+                <div class="btn-buy">
+                    <p>Mua hàng (0)</p>
+                </div>
+            </div>
+        </div>
     </section>
 </body>
 </html>
